[package]
name = "komi_wasm"
version = "0.1.0-beta11"
edition = "2024"

[dependencies]
wasm-bindgen = "0.2.100"
const_format = "0.2.34"
komi = { path = "../komi" }
komi_syntax = { path = "../komi_syntax" }
komi_util = { path = "../komi_util" }
js-sys = "0.3.77"

[dev-dependencies]
wasm-bindgen-test = "0.3.50"

[lib]
crate-type = ["cdylib", "rlib"]